logs/py-generator.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/generator'...
Compiling './lib/python3.5/site-packages/generator/__main__.py'...
***   File "./lib/python3.5/site-packages/generator/__main__.py", line 15
    print open(file_path).read()
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/generator/file_manager'...
Compiling './lib/python3.5/site-packages/generator/file_manager/manager.py'...
***   File "./lib/python3.5/site-packages/generator/file_manager/manager.py", line 74
    print 'Created successfully: %s' % (file_name)
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/generator/file_templates'...
Listing './lib/python3.5/site-packages/generator/file_templates/component'...
Listing './lib/python3.5/site-packages/generator/file_templates/filter'...
Listing './lib/python3.5/site-packages/generator/file_templates/route'...
Listing './lib/python3.5/site-packages/generator/utils'...
Compiling './lib/python3.5/site-packages/generator/utils/utils.py'...
***   File "./lib/python3.5/site-packages/generator/utils/utils.py", line 19
    print "Expected to find configuration file with the setup"
                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py_generator-0.2.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
